--- a/index.html
+++ b/index.html
@@ -6,13 +6,49 @@
     <meta http-equiv="x-ua-compatible" content="ie-edge">
     <title>Proyecto</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <style media="screen">
+      .borde{
+        background-color: gray;
+        height: 200px;
+      }
+      .borde1{
+        background-color: aquamarine;
+        height: 50px;
+        text-align: center;
+      }
+      .borde2{
+        height: 50px;
+        text-align: center;
+        background-color: olivedrab;
+      }
+      .borde3{
+        height: 50px;
+        text-align: center;
+        background-color: orangered;
+      }
+    </style>
   </head>
   <body>
+    <!--Empieza el contenido-->
+    <h1>Bienvenido</h1>
+    <div class="container-fluid borde">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-8 col-lg-4 col-xl-8 borde1">
+          <p>Uno</p>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-2 borde2">
+          <p>Dos</p>
+        </div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-2 borde3">
+          <p>Tres</p>
+        </div>
+
+      </div>
+    </div>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
-
 </html>
