--- a/index.html
+++ b/index.html
@@ -31,19 +31,35 @@
   <body>
     <!--Empieza el contenido-->
     <h1>Bienvenido</h1>
-    <div class="container-fluid borde">
+    <div class="container">
+
       <div class="row">
-        <div class="col-12 col-sm-6 col-md-8 col-lg-4 col-xl-8 borde1">
+        <div class="col">
+          <h3>Cabezera</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-8 col-lg-4 col-xl-2 d-xs-none d-sm-none d-md-block d-lg-block d-xl-block borde1">
           <p>Uno</p>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-2 borde2">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-8 borde2">
           <p>Dos</p>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-2 borde3">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-2 d-xs-none d-sm-none d-md-block d-lg-block d-xl-block borde3">
           <p>Tres</p>
         </div>
 
       </div>
+      <div class="row">
+        <div class="col">
+          <h3>Pie de pagina</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        </div>
+      </div>
+
     </div>
 
 
