--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit">
     <meta http-equiv="x-ua-compatible" content="ie-edge">
-    <title>Columnas y Ocultar</title>
+    <title>Proyecto</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style media="screen">
       .borde{
@@ -30,36 +30,61 @@
   </head>
   <body>
     <!--Empieza el contenido-->
-    <h1>Bienvenido</h1>
-    <div class="container">
+    <h1>Alineacion</h1>
 
-      <div class="row">
+    <div class="container" style="height: 500px;">
+      <div class="row border">
         <div class="col">
-          <h3>Cabezera</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="clearfix">
+            <span class="float-left">Iquierda</span>
+            <span class="float-right">Derecha</span>
+          </div>
 
         </div>
       </div>
-      <div class="row">
-        <div class="col-12 col-sm-6 col-md-8 col-lg-4 col-xl-2 d-xs-none d-sm-none d-md-block d-lg-block d-xl-block borde1">
+      <div class="row d-block">
+        <div class="float-sm-right">
+          Uno
+        </div>
+        <div class="float-md-right">
+          Dos
+        </div>
+        <div class="mx-auto border" style="width: 100px">
+          Centro
+        </div>
+        <div class="float-xl-right">
+          Cuatro
+        </div>
+        <div class="float-none">
+          Cinco
+        </div>
+
+
+      </div>
+      <div class="row justify-content-between borde1">
+        <div class="borde2 ">
           <p>Uno</p>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-8 borde2">
+        <div class="borde3 ">
           <p>Dos</p>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-2 d-xs-none d-sm-none d-md-block d-lg-block d-xl-block borde3">
-          <p>Tres</p>
-        </div>
-
       </div>
-      <div class="row">
-        <div class="col">
-          <h3>Pie de pagina</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+      <div class="row justify-content-around borde1">
+        <div class="borde2">
+          <p>Uno</p>
+        </div>
+        <div class="borde3">
+          <p>Dos</p>
         </div>
       </div>
-
+      <div class="row align-items-center borde1" style="height: 300px">
+        <div class="borde2 align-self-center">
+          <p>Uno</p>
+        </div>
+        <div class="borde3 align-self-end">
+          <p>Dos</p>
+        </div>
+      </div>
     </div>
 
 
