--- a/index4.html
+++ b/index4.html
@@ -6,42 +6,21 @@
     <meta http-equiv="x-ua-compatible" content="ie-edge">
     <title>Proyecto</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <style media="screen">
-      .borde{
-        background-color: gray;
-        height: 200px;
-      }
-      .borde1{
-        background-color: aquamarine;
-        height: 50px;
-        text-align: center;
-      }
-      .borde2{
-        height: 50px;
-        text-align: center;
-        background-color: olivedrab;
-      }
-      .borde3{
-        height: 50px;
-        text-align: center;
-        background-color: orangered;
-      }
-    </style>
   </head>
   <body>
 
     <!--Empieza el contenido-->
-    <h1>Tipografia</h1>
+    <h1>Tipografia y background</h1>
     <div class="container borde">
 
-      <div class="row borde1" >
+      <div class="row bg-secondary" >
         <div class="text-justify ">
           <h1 class="display-4 mark">Hola a todos</h1>
           <h1 class="small">Hola a todos</h1>
-          <p class="small mark">Esto es un parrafo normal sin mucho contenido</p>
-          <p class="text-nowrap">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p class="small mark bg-primary text-light">Esto es un parrafo normal sin mucho contenido</p>
+          <p class="text-nowrap bg-success">Lorem ipsum dolor  sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <p>Actualmente <abbr title="Lenguaje de marcas de Hipertexto">HTML</abbr>Es muy utilizado en los sitios web.</p>
-          <code>
+          <code class="bg-info">
             body{
             background-color:red;
             }
@@ -52,7 +31,7 @@
             }
           </pre>
           <p>Apretar <kbd>Ctrl+C</kbd> para copiar</p>
-          <p class="font-weight-light font-italic small text-center text-uppercase">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p class="bg-warning font-weight-light font-italic small text-center text-uppercase">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <blockquote cite="http://">
 
           </blockquote>
