--- a/index10.html
+++ b/index10.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Paginacion</h1>
+    <h1>Paginacion y Listas</h1>
     <ul class="container">
         <div class="pagination">
           <li class="page-item"><a class="page-link" href="#">Previo</a></li>
@@ -27,6 +27,13 @@
           <li class="breadcrumb-item"><a  href="#">3</a></li>
           <li class="breadcrumb-item"><a  href="#">Siguiente</a></li>
         </div>
+    </ul>
+    <ul class="list-group">
+          <li class="list-group-item"><a href="#">Lunes</a></li>
+          <li class="list-group-item "><a href="#">Martes</a></li>
+          <li class="list-group-item"><a href="#">Miercoles</a></li>
+          <li class="list-group-item"><a  href="#">Jueves</a></li>
+          <li class="list-group-item"><a  href="#">Viernes</a></li>
     </ul>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
