--- a/index10.html
+++ b/index10.html
@@ -30,7 +30,7 @@
     </ul>
     <ul class="list-group">
           <li class="list-group-item"><a href="#">Lunes</a></li>
-          <li class="list-group-item "><a href="#">Martes</a></li>
+          <li class=" list-group-item list-group-item-action "><a href="#">Martes</a></li>
           <li class="list-group-item"><a href="#">Miercoles</a></li>
           <li class="list-group-item"><a  href="#">Jueves</a></li>
           <li class="list-group-item"><a  href="#">Viernes</a></li>
