--- a/index12.html
+++ b/index12.html
@@ -9,11 +9,45 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    <h1></h1>
+    <h1>Navegacion</h1>
     <div class="container">
-
+      <div class="row">
+        <div class="col">
+          <ul class="nav justify-content-center nav-pills fixed-top">
+            <li class="nav-item"><a href="#" class="nav-link active" >Link</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Link 2</a></li>
+            <li class="nav-item dropdown" ><a href="#" data-toggle='dropdown' class="nav-link dropdown-toggle" >Link 3</a>
+              <div class="dropdown-menu">
+                <a href="#" class="dropdown-item">Sub</a>
+                <a href="#" class="dropdown-item">Sub</a>
+                <a href="#" class="dropdown-item">Sub</a>
+              </div>
+            </li>
+            <li class="nav-item"><a href="#" class="nav-link disabeld">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
+    <nav class="navbar navbar-expand-md bg-dark">
+      <li class="navbar-brand">Hola</li>
+      <button type="button" class="navbar-toggler" data-toggle='collapse' data-target='uno' name="button">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="uno">
+        <ul class="navbar-nav">
 
+          <li class="nav-item"><a href="#" class="nav-link active" >Link</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Link 2</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Link 3</a></li>
+          <li class="nav-item"><a href="#" class="nav-link disabeld">Link 4</a></li>
+        </ul>
+      </div>
+
+    </nav>
+
+    <div class="">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
